<resources>
    <string name="app_name">MyFashionStore</string>
    <string name="Title">Show your **##*** Style!</string>
    <string name="Title2" formatted="true">Continue with</string>
    <string name="imageTitle">imageTitle</string>
    <string name="Title3">Don\'t Worry! We will never post anything without your permission</string>
    <string name="login">Already have an account? </string>

    <string name="Terms">By creating an account,you agree to our<u> Terms Privacy Policy</u>.</string>
    <string name="mahmoud"> dscsdcsdc <font color='#01C6DB' textStyle='bold'>Login</font></string>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment1">Hello blank fragmentHello blank fragmentHello blank fragment
    Hello blank fragment Hello blank fragment Hello blank fragment
    Hello blank fragment Hello blank fragment Hello blank fragment
    Hello blank fragment Hello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
        Hello blank fragment Hello blank fragment Hello blank fragment
    Hello blank fragment Hello blank fragment Hello blank fragment
    Hello blank fragment Hello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    Hello blank fragmentHello blank fragment Hello blank fragment
    </string>
    <string name="followingString">FOLLOWING</string>
    <string name="trendingString">TRENDING</string>
    <string name="recentString">RECENT</string>


</resources>


    <!--
<string name="login">Already have an account?
        <font color='#FF0000'>
            <b>Login</b>
        </font>
    </string>

-->